--- a/css/main.css
+++ b/css/main.css
@@ -105,11 +105,13 @@ html {
   box-sizing: inherit;
 }
 
+body{
+    background-color: #111;
+}
+
 #canvas{
     display: block;
     margin: 0 auto;
-
-    box-shadow: 0px 11px 18px 0px rgba(50, 50, 50, 0.75);
 }
 
 
